--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 FIXME(urgent):
 - fix BseMixer sync behaviour across saving
+- importing MIDI files doesn't create a mixer
+- when resizing trackview, the left paned child (track treeview) should stay fixed in horizontal size
+- WaveView zoom-field should be vertically aligned with vscale-field
+- add mini list besides track add/del buttons that contains orphaned parts (sorted by most recently orphaned)
 - after laoding a sample from the instrument selection box, make it the default selection
 - display bpm only with float precision
 - add extra path handling for freepats packages
