--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -43,6 +43,7 @@ translations can be obtained from the following pages.
 @uref{http://l10n-status.gnome.org/HEAD/pt/extras/index.html,, pt},
 @uref{http://l10n-status.gnome.org/HEAD/pt_BR/extras/index.html,, pt_BR},
 @uref{http://l10n-status.gnome.org/HEAD/ru/extras/index.html,, ru},
+@uref{http://l10n-status.gnome.org/HEAD/rw/extras/index.html,, rw},
 @uref{http://l10n-status.gnome.org/HEAD/sq/extras/index.html,, sq},
 @uref{http://l10n-status.gnome.org/HEAD/sr/extras/index.html,, sr},
 @uref{http://l10n-status.gnome.org/HEAD/sr/extras/index.html,, sr@@Latn},
