--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr 13 03:28:43 2005  Tim Janik  <timj@gtk.org>
+
+	* configure.in: released beast 0.6.5, binary 0, interface 0.
+
 Wed Apr 13 02:31:40 2005  Tim Janik  <timj@gtk.org>
 
 	* docs/generated/log2markup.pl: new script to generate texi markup 
