--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -29,8 +29,8 @@
 @newsTitle{Wednesday 13 April 2005, A new release - we finaly made it!}
 
 BEAST/BSE version 0.6.5 is available from the
-@uref{beast-doc://download,,download section}.
-@c , here is the @uref{http://www.gnomedesktop.org/article.php?sid=1870,,FootNotes announcement}.
+@uref{beast-doc://download,,download section},
+here is the @uref{http://gnomedesktop.org/node/2225,,FootNotes announcement}.
 
 BEAST tarball:
 @uref{http://beast.gtk.org/beast-ftp/v0.6/beast-0.6.5.tar.gz,, beast-0.6.5.tar.gz}
