--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXME(urgent):
+- tools/song/track-busses needs to stop playback befgore operating
 - integrate or reimplement fan sliders: http://www.gazuga.net/phat.php
 - when resizing trackview, the left paned child (track treeview) should stay fixed in horizontal size
 - WaveView zoom-field should be vertically aligned with vscale-field
@@ -340,6 +341,12 @@ TASKS:
 : propagate mtime changes through cascaded data handles (e.g. for dcache)
 : gsldatacache.c: nuke blocks upon reopen if mtime changed
 : clone handle caller must be fetched from stack
+
+Instruments:
+- a) support multiple signal paths in an instrument. (so there can be different effects in the paths)
+- b) allow tabulation of what sample is played by what key through what signal path
+- a+b) should allow: use different effects for different drum samples (overdrive snare, compress kick)
+- a+b) should allow: split keyboard setup where one octave plays a completely different instrument than the next
 
 PianoRoll:
 - PianoRoll: add drum-roll mode where chunk labels are displayed (and note pictures change?)
