--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Apr 19 16:19:29 2005  Tim Janik  <timj@gtk.org>
+
+	* more renames of C++ header files from .h to .hh.
+
+	* tools/bsewavetool.cc, tools/bwtwave.cc: include .hh headers.
+
+	* tools/bsewavetool.h, tools/bwtwave.h: removed.
+
 Tue Apr 19 16:16:53 2005  Tim Janik  <timj@gtk.org>
 
 	* tools/bsewavetool.hh: CVS copied from tools/bsewavetool.h.
