--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+Sat Apr 23 13:16:48 2005  Tim Janik  <timj@gtk.org>
+
+	* it.po: language translation updates from Petrecca Michele. 
+	fixed copyright header slightly.
+
 2005-04-01  Steve Murphy  <murf@e-tools.com>
 
         * rw.po: Added Kinyarwanda translation.
