--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-30  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 Sat Apr 23 13:16:48 2005  Tim Janik  <timj@gtk.org>
 
 	* it.po: language translation updates from Petrecca Michele. 
