--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Thu May  5 19:03:41 2005  Tim Janik  <timj@gtk.org>
+
+	* bsestorage.c (bse_storage_put_data_handle): fix floats being saved via
+	localized printf(), instead of locale-independent putf/putd methods.
+
 Tue Apr 19 16:30:51 2005  Tim Janik  <timj@gtk.org>
 
 	* Makefile.am, gslmakefile.inc: fixed gsl headers not being uninstalled.
