--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
 RELEASE(0.6.6):
 - fix/re-enable midi note recording into piano roll
 FIXME(urgent):
+- implement window position and size save/restore
+- popping up two modal dialogs (error and warning) allowes closing of only one
+- implement combinatoric selections with shift+control
+- need repeater script similar to harmonic transposer
+- loading GMKit (~/bse/gmkitbroken.bsewave) and saving inlined in .bse breaks the samples
 - tools/song/track-busses needs to stop playback befgore operating
 - integrate or reimplement fan sliders: http://www.gazuga.net/phat.php
 - when resizing trackview, the left paned child (track treeview) should stay fixed in horizontal size
@@ -31,6 +36,7 @@ FIXME(urgent):
 - add Left and Right channels to BseAmplifier to allow stereo amplification
 - add http://tap-plugins.sourceforge.net/ladspa/sigmoid.html to BseStandardSaturation
 - registering the same script function twice triggers GType assertion
+- Mixer: add raise/lower equivalents: right/left move
 TODO:
 - TrackRoll: support shift/ctrl/alt modifier to copy/link/move parts
 - TrackRoll: disallow instrument field editing or dialog box during playback (simply gdk_beep())
