--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+
+	* eu.po:  Added Basque translation.
+
 2005-05-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
