apprximate ~n by n in ChangeLog so our doc tools can process it.
svn path=/trunk/; revision=3266

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Fri May 13 11:51:00 2005  Iñaki Larrañaga  <dooteo@euskalgnu.org>
+Fri May 13 11:51:00 2005  Inaki Larranaga  <dooteo@euskalgnu.org>
 
 	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.
 
