--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-13  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-05-13  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* eu.po:  Added Basque translation.
